# ScalyTailClimber

./: CMakeLists.txt  README.md
include/: leg.h
software/src/: main.cpp
src/: main.cpp
